--- a/OpsManage/templates/cmdb/ServerManage/add/addMore.html
+++ b/OpsManage/templates/cmdb/ServerManage/add/addMore.html
@@ -81,7 +81,7 @@
                             <!-- 内存插槽 -->
                             <div class="form-group">
                                 <label for="RAM_slot">内存插槽</label><br>
-                                <input class="form-control" type="number" id="RAM_slot" name="slot"
+                                <input class="form-control" type="text" id="RAM_slot" name="slot"
                                        placeholder="请输入内存插槽">
                             </div>
                             <!-- /内存插槽 -->
@@ -144,7 +144,7 @@
                             <!-- CPU插槽 -->
                             <div class="form-group">
                                 <label for="CPU_slot">插槽</label><br>
-                                <input class="form-control" type="number" id="CPU_slot" name="slot"
+                                <input class="form-control" type="text" id="CPU_slot" name="slot"
                                        placeholder="请输入CPU插槽">
                             </div>
                             <!-- /CPU插槽 -->
@@ -215,7 +215,7 @@
                             <!-- 硬盘插槽 -->
                             <div class="form-group">
                                 <label for="DISK_slot">硬盘插槽</label><br>
-                                <input class="form-control" type="number" id="DISK_slot" name="slot"
+                                <input class="form-control" type="text" id="DISK_slot" name="slot"
                                        placeholder="请输入硬盘插槽">
                             </div>
                             <!-- /硬盘插槽 -->
@@ -314,7 +314,7 @@
                             <!-- 网卡插槽 -->
                             <div class="form-group">
                                 <label for="PORT_slot">网卡插槽</label><br>
-                                <input class="form-control" type="number" id="PORT_slot" name="slot"
+                                <input class="form-control" type="text" id="PORT_slot" name="slot"
                                        placeholder="请输入网卡槽位">
                             </div>
                             <!-- /网卡插槽 -->
@@ -376,7 +376,7 @@
                             <!-- 部件槽位 -->
                             <div class="form-group">
                                 <label for="PART_slot">部件插槽</label><br>
-                                <input class="form-control" type="number" id="PART_slot" name="slot"
+                                <input class="form-control" type="text" id="PART_slot" name="slot"
                                        placeholder="请输入硬盘插槽">
                             </div>
                             <!-- /部件槽位  -->
