--- a/OpsManage/templates/login.html
+++ b/OpsManage/templates/login.html
@@ -69,6 +69,7 @@
         </div>
         <!-- /.col -->
         <div class="col-xs-4">
+            <input type="hidden" name="nextUrl" value="{{ nextUrl }}">
           <button type="submit" class="btn btn-primary btn-block btn-flat">登录</button>
         </div>
         <!-- /.col -->
