修改用户认证

--- a/OpsManage/templates/cmdb/assetMap.html
+++ b/OpsManage/templates/cmdb/assetMap.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% load staticfiles %}
 {% block css_block %}
 <link type="text/css" rel="stylesheet" href="{% static 'dist/css/tab_css.css' %}">
 <style type="text/css">
