--- a/OpsManage/templates/cmdb/basicData/modelManage.html
+++ b/OpsManage/templates/cmdb/basicData/modelManage.html
@@ -11,7 +11,7 @@
 <ul id="tabs">
     <li id="org"><a href="/cmdb/orgManage">组织机构</a></li>
     <li id="idc"><a href="/cmdb/idcManage">机房管理</a></li>
-    <li id="user"><a href="/cmdb/userManage">用户管理</a></li>
+    <!--<li id="user"><a href="/cmdb/userManage">用户管理</a></li>-->
     <li id="contract"><a href="/cmdb/contractManage">合同管理</a></li>
     <li id="supplier"><a href="/cmdb/supplierManage">供应商管理</a></li>
     <li id="vendor"><a href="/cmdb/vendorManage">厂商管理</a></li>
