--- a/OpsManage/templates/base.html
+++ b/OpsManage/templates/base.html
@@ -133,7 +133,7 @@ desired effect
                                     <a class="btn btn-default btn-flat cd-signin" onclick=" layer.open({type: 2,title:'',closeBtn: 1,area: ['400px', '300px'],shadeClose: true, content: ['/accounts/editAdmin'],});">修改密码</a>
                                 </div>
                                 <div class="pull-right">
-                                    <a href="/logout" class="btn btn-default btn-flat">注销登录</a>
+                                    <a href="/accounts/logout" class="btn btn-default btn-flat">注销登录</a>
                                 </div>
                             </li>
                         </ul>
@@ -240,6 +240,22 @@ desired effect
 
             </ul>
             <!-- /第二块 -->
+
+
+            <!-- 第三块 -->
+            <ul id="config" class="sidebar-menu" style="display: none" data-widget="tree">
+                <li class="header">Config</li>
+
+                <li>
+                  <a href="{% url 'accounts:userManage'%}">
+                    <i class="fa fa-users"></i> <span>用户管理</span>
+                  </a>
+                </li>
+
+
+            </ul>
+            <!-- /第三块 -->
+
             <!-- /.sidebar-menu -->
 
         </section>
@@ -328,10 +344,10 @@ desired effect
     $.widget.bridge('uibutton', $.ui.button);
 </script>
 
-
+<!--每空闲两分钟下线-->
 <script>
 function checkUserFun(){
-    var maxTime = 1*60; // seconds  (2小时)
+    var maxTime = 2*60; // seconds  (2分钟)
     var time = maxTime;
     $('body').on('keydown mousemove mousedown click scroll', function(e){
         time = maxTime; // reset
@@ -346,11 +362,20 @@ function checkUserFun(){
     function ShowInvalidLoginMessage(){
 　　　　　//清除用户信息
         // alert('页面失效，请重新登录');
-        window.location.href = "/logout";
+        window.location.href = "/accounts/logout";
         //跳转到登录页面
     }
 }
 checkUserFun()
+</script>
+
+
+<script>
+    $(document).ready(function () {
+        if ('{{ Perm }}' == 1) {
+            $('#config').css('display','');
+        };
+    });
 </script>
 
 {% block foot_js %} {% endblock %}
