--- a/OpsManage/templates/login.html
+++ b/OpsManage/templates/login.html
@@ -2,118 +2,111 @@
 <html>
 {% load staticfiles %}
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>IT Opration | Log in</title>
-  <!-- Tell the browser to be responsive to screen width -->
-  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-  <!-- Bootstrap 3.3.7 -->
-  <!--<link rel="stylesheet" href="/static/dist/bootstrap-3.3.7-dist/css/bootstrap.min.css">-->
-  <link rel="stylesheet" href="{% static 'dist/bootstrap-3.3.7-dist/css/bootstrap.min.css' %}">
-  <!-- Font Awesome -->
-   <!--<link rel="stylesheet" href="/static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">-->
-  <link rel="stylesheet" href="{% static 'fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}">
-  <!-- Ionicons -->
-  <!--<link rel="stylesheet" href="/static/dist/ionicons/css/ionicons.min.css">-->
-  <link rel="stylesheet" href="{% static 'dist/ionicons/css/ionicons.min.css' %}">
-  <!-- Theme style -->
-  <!--<link rel="stylesheet" href="/static/dist/css/AdminLTE.css">-->
-  <link rel="stylesheet" href="{% static 'dist/css/AdminLTE.css' %}">
-  <!-- iCheck -->
-  <!--<link rel="stylesheet" href="/static/dist/iCheck/square/blue.css">-->
-  <link rel="stylesheet" href="{% static 'dist/iCheck/square/blue.css' %}">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>IT Opration | Log in</title>
+    <!-- Tell the browser to be responsive to screen width -->
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <!-- Bootstrap 3.3.7 -->
+    <!--<link rel="stylesheet" href="/static/dist/bootstrap-3.3.7-dist/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="{% static 'dist/bootstrap-3.3.7-dist/css/bootstrap.min.css' %}">
+    <!-- Font Awesome -->
+    <!--<link rel="stylesheet" href="/static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">-->
+    <link rel="stylesheet" href="{% static 'fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}">
+    <!-- Ionicons -->
+    <!--<link rel="stylesheet" href="/static/dist/ionicons/css/ionicons.min.css">-->
+    <link rel="stylesheet" href="{% static 'dist/ionicons/css/ionicons.min.css' %}">
+    <!-- Theme style -->
+    <!--<link rel="stylesheet" href="/static/dist/css/AdminLTE.css">-->
+    <link rel="stylesheet" href="{% static 'dist/css/AdminLTE.css' %}">
+    <!-- iCheck -->
+    <!--<link rel="stylesheet" href="/static/dist/iCheck/square/blue.css">-->
+    <link rel="stylesheet" href="{% static 'dist/iCheck/square/blue.css' %}">
 
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
-  <!-- Google Font -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+    <!-- Google Font -->
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
 <body class="hold-transition login-page">
 <div>
 
 </div>
 <div class="login-box">
-  <div class="login-logo">
-    <a href="#"><b>IT O</b>peration</a>
-  </div>
-  <!-- /.login-logo -->
-  <div class="login-box-body">
-    <p class="login-box-msg">请输入用户及密码</p>
+    <div class="login-logo">
+        <a href="#"><b>IT O</b>peration</a>
+    </div>
+    <!-- /.login-logo -->
+    <div class="login-box-body">
+        <p class="login-box-msg">请输入用户及密码</p>
 
-    <form id="login-form"  method="post" action="/loginSubmit">
-      {% csrf_token %}
-      <div class="form-group has-feedback">
-        <input type="text" class="form-control" name="username" id="userName" placeholder="User">
-        <span class="glyphicon glyphicon-user form-control-feedback"></span>
-      </div>
-      <div class="form-group has-feedback">
-        <input type="password" class="form-control" id="password" name="password" placeholder="Password">
-        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-      </div>
-        {% if Flag %}
-          <br>
-          用户名或密码错误，请重试
-        {% endif %}
-      <div class="row">
-        <div class="col-xs-8">
-          <div class="checkbox icheck">
-            <label>
-              <input type="checkbox"> 记住用户名
-            </label>
-          </div>
-        </div>
-        <!-- /.col -->
-        <div class="col-xs-4">
-            <input type="hidden" name="nextUrl" value="{{ nextUrl }}">
-          <button type="submit" class="btn btn-primary btn-block btn-flat">登录</button>
-        </div>
-        <!-- /.col -->
-      </div>
-    </form>
+        <form id="login-form" method="post" action="{% url 'accounts:login'%}" novalidate>
+            {% csrf_token %}
 
-    <!--<div class="social-auth-links text-center">-->
-      <!--<p>- OR -</p>-->
-      <!--<a href="#" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-facebook"></i> Sign in using-->
-        <!--Facebook</a>-->
-      <!--<a href="#" class="btn btn-block btn-social btn-google btn-flat"><i class="fa fa-google-plus"></i> Sign in using-->
-        <!--Google+</a>-->
-    <!--</div>-->
-    <!-- /.social-auth-links -->
+            <span style="color: red">{{ login_error}}</span>
+            <div class="form-group has-feedback">
+                {{ loginForm.username }}
+                <span class="glyphicon glyphicon-user form-control-feedback"></span>
+            </div>
+            <span style="color: red">{{ loginForm.username.errors }}</span>
 
-    <!--<a href="#">I forgot my password</a><br>-->
-    <!--<a href="#" class="text-center">Register a new membership</a>-->
-    <br><br>
-    <!--<span>暂不开放用户注册</span><br>-->
-    <span>如忘记密码请联系系统管理员</span>
+            <div class="form-group has-feedback">
+                {{ loginForm.password }}
+                <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+            </div>
+            <span style="color: red">{{ loginForm.password.errors }}</span>
 
-  </div>
-  <!-- /.login-box-body -->
+            <div class="row">
+                <div class="col-xs-8">
+                    <div class="checkbox icheck">
+                        <label>
+                            <input type="checkbox"> 记住用户名
+                        </label>
+                    </div>
+                </div>
+                <!-- /.col -->
+                <div class="col-xs-4">
+                    <input type="hidden" name="nextUrl" value="{{ nextUrl }}">
+                    <button type="submit" class="btn btn-primary btn-block btn-flat">登录</button>
+                </div>
+                <!-- /.col -->
+            </div>
+        </form>
+
+
+        <br>
+        <br>
+        <span>如忘记密码请联系系统管理员</span>
+
+    </div>
+    <!-- /.login-box-body -->
 </div>
 <!-- /.login-box -->
 
 <!-- jQuery 3 -->
 <!--<script type="text/javascript" src="/static/dist/js/jquery-3.3.1.min.js"></script>-->
-<script src=" {% static 'dist/js/jquery-3.3.1.min.js' %}"> </script>
+<script src=" {% static 'dist/js/jquery-3.3.1.min.js' %}"></script>
 <!-- Bootstrap 3.3.7 -->
 <!--<script type="text/javascript"  src="/static/dist/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>-->
-<script src=" {% static 'dist/bootstrap-3.3.7-dist/js/bootstrap.min.js' %}"> </script>
+<script src=" {% static 'dist/bootstrap-3.3.7-dist/js/bootstrap.min.js' %}"></script>
 <!-- iCheck -->
 <!--<script src="/static/dist/iCheck/icheck.min.js"></script>-->
-<script src=" {% static 'dist/iCheck/icheck.min.js' %}"> </script>
+<script src=" {% static 'dist/iCheck/icheck.min.js' %}"></script>
 
 <script>
-  $(function () {
-    $('input').iCheck({
-      checkboxClass: 'icheckbox_square-blue',
-      radioClass: 'iradio_square-blue',
-      increaseArea: '20%' /* optional */
+    $(function () {
+        $('input').iCheck({
+            checkboxClass: 'icheckbox_square-blue',
+            radioClass: 'iradio_square-blue',
+            increaseArea: '20%' /* optional */
+        });
     });
-  });
 </script>
 </body>
 </html>
