--- a/OpsManage/templates/base.html
+++ b/OpsManage/templates/base.html
@@ -173,6 +173,7 @@ desired effect
                         <li><a href="/cmdb/"><i class="fa fa-circle-o"></i> 资产地图</a></li>
                         <li><a href="/cmdb/asset/"><i class="fa fa-circle-o"></i> 资产列表</a></li>
                         <li><a href="/cmdb/basicData/"><i class="fa fa-circle-o"></i> 基础数据</a></li>
+                        <li><a href="/cmdb/eventLog/"><i class="fa fa-circle-o"></i> 操作日志</a></li>
                     </ul>
                 </li>
 
